--- a/views/contact.html
+++ b/views/contact.html
@@ -35,14 +35,14 @@
         <div class="link">
             <nav>
                 <ul>
-                    <a href="https://www.instagram.com/remon8071/"><i class="fab fa-instagram fa-3x"></i></a>
+                    <a href="https://www.instagram.com/raad_remon/"><i class="fab fa-instagram fa-3x"></i></a>
                     <a href="https://www.snapchat.com/add/raad_remon2019?share_id=QUU0Q0My&locale=en_BD"><i class="fab fa-snapchat-ghost fa-3x"></i></a>
                     <a href="https://discord.com/channels/750565363087048724/750565363087048727"><i class="fab fa-discord fa-3x"></i></a>
                     <a href="https://twitter.com/Remon111533922"><i class="fab fa-twitter fa-3x"></i></a>
                     <a href="https://github.com/Remon009534"><i class="fab fa-github fa-3x"></i></a>
                     <a href="https://www.reddit.com/user/Remon8071"><i class="fab fa-reddit-alien fa-3x"></i></a>
                     <!-- <a><i class="fab fa-telegram-plane fa-3x"></i></a> -->
-                    <a><i class="fab fa-facebook fa-3x"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100077659358660"><i class="fab fa-facebook fa-3x"></i></a>
                 </ul>
             </nav>
         </div>
